--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,67 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+ion-toolbar {
+  --background: url(/../assets/images/navbarbg.png) 0 0/100% 100% no-repeat;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.boutonbard{
+  float: right;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
+#main-grid{
+    height:100%;
+  .little-row {
+    height:25%;
+  }
 
-  color: #8c8c8c;
+  .big-row {
+    height:50%;
+  }
 
-  margin: 0;
+  #toolbar{
+    top: 0;
+  }
+
+  #container{
+    position: relative;
+    text-align: center;
+    left : 30px;
+    top : 35px;
+  }
+}
+h1{
+  padding:2.5em;
+  font-family: 'Snell Roundhand';
 }
 
-#container a {
-  text-decoration: none;
+ion-col {
+  width: 100%;
+}
+
+ion-content {
+  --background: url(/../assets/images/background.png) 0 0/100% 100% no-repeat;
+}
+
+#button1{
+  opacity : 0.66;
+  width : 100%;
+  height : 100px;
+  margin-left: 10px;
+  
+}
+
+.textbutton2{
+  position : relative;
+  left:17px;
+}
+.button2{
+  width : 100%;
+  opacity : 0.66;
+  height : 100px;
+  margin:0;
+}
+
+img{
+  position : absolute;
+  max-height: 50%;
+  opacity:1;
+  left: -10px;
 }
