--- a/src/app/bateau-type/bateau-type.page.scss
+++ b/src/app/bateau-type/bateau-type.page.scss
@@ -1,43 +1,43 @@
-ion-toolbar {
-  --background: url(/../assets/images/navbarbg.png) 0 0/100% 100% no-repeat;
-}
-.boutonbard{
-  float: right;
-}
-
 ion-content {
     --background: url(/../assets/images/background.png) 0 0/100% 100% no-repeat;
   }
 
+  ion-toolbar {
+    --background: url(/../assets/images/navbarbg.png) 0 0/100% 100% no-repeat;
+  }
   
-  
+  .boutonbard{
+    float: right;
+  }
+
     img {
     position:absolute;
-    left:120px;
-    top:180px;
-    width:180px;
-    border-radius:10px;
-    
+    left:100px;
+    width: 220px;
+    top:100px;
+    border-radius:30px
     }
-  
+
     h1{
         position: absolute;
         padding:3em;
         font-family: 'Snell Roundhand';
         text-align: center;
-        font-size: 1.7em;
-        padding-top:30px;
-        left:20px;
+        font-size: 2.1em;
+        padding-top:1px;
+        left:30px;
         color: white;
         font-weight:bold;
       }
-  
-    div{
+
+    p{
         position: absolute;
         font-size: 0.8em;
         top:450px;
         text-align: center;
-        left:60px;
+        left:100px;
         
         
     }
+   
+  
