--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,11 +1,8 @@
 
 <ion-header>
   <ion-toolbar id = "toolbar">
-      <ion-button class = "boutonbard" [routerLink] = "['/magasin']">
+      <ion-button class = "boutonbarg" [routerLink] = "['/magasin']">
         <ion-icon slot="icon-only" name="cart-outline"></ion-icon>
-      </ion-button>
-      <ion-button class = "boutonbarg" [routerLink] = "['/home']">
-        <ion-icon slot="icon-only" name="home"></ion-icon>
       </ion-button>
   </ion-toolbar>
 </ion-header>
