--- a/src/app/magasin/magasin.page.html
+++ b/src/app/magasin/magasin.page.html
@@ -60,7 +60,7 @@
     <ion-row>
       <ion-col>
         <ion-button class ="button2" (click) = "this.panier.addSomme(20)">
-          Huitres 10 à 20€+
+          10 Huitres à 20€ +
         </ion-button>
       </ion-col>
       <ion-col>
