--- a/src/app/magasin/magasin.page.scss
+++ b/src/app/magasin/magasin.page.scss
@@ -26,6 +26,7 @@ ion-toolbar {
 
 ion-content {
   --background: url(/../assets/images/background.png) 0 0/100% 100% no-repeat;
+  color:black;
 }
 
 
